@@ -86,6 +86,9 @@ Positions of SQL result tabs and of Session tabs can now be changed using drag a
 
 Bug fixes:
 
+#1076, 1061 Squirrel does not list tables when connected to DB2
+  Thanks to Gabor Keresztfalvi for the patch.
+
 #1077 EDT Violation reported in log while copying tables
 
 For detached Session windows drag and drop to query builder did not work
